@@ -8333,65 +8333,8 @@ return|return
 literal|false
 return|;
 block|}
-name|String
-name|baseUrl
-init|=
-name|replica
-operator|.
-name|getStr
-argument_list|(
-name|BASE_URL_PROP
-argument_list|)
-decl_stmt|;
-name|String
-name|coreName
-init|=
-name|replica
-operator|.
-name|getStr
-argument_list|(
-name|CORE_NAME_PROP
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|baseUrl
-operator|.
-name|equals
-argument_list|(
-name|this
-operator|.
-name|baseURL
-argument_list|)
-operator|&&
-name|coreName
-operator|.
-name|equals
-argument_list|(
-name|cd
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-condition|)
-block|{
 return|return
 literal|true
-return|;
-block|}
-name|errorMessage
-operator|.
-name|set
-argument_list|(
-literal|"coreNodeName "
-operator|+
-name|coreNodeName
-operator|+
-literal|" exists, but does not match expected node or core name"
-argument_list|)
-expr_stmt|;
-return|return
-literal|false
 return|;
 block|}
 argument_list|)
