@@ -287,6 +287,24 @@ operator|.
 name|request
 operator|.
 name|CollectionAdminRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|CollectionAdminRequest
 operator|.
 name|Create
 import|;
@@ -830,6 +848,47 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|CollectionAdminRequest
+operator|.
+name|setClusterProperty
+argument_list|(
+literal|"legacyCloud"
+argument_list|,
+literal|"false"
+argument_list|)
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|CollectionAdminRequest
+operator|.
+name|setClusterProperty
+argument_list|(
+literal|"legacyCloud"
+argument_list|,
+literal|"true"
+argument_list|)
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -1903,6 +1962,110 @@ expr_stmt|;
 name|assertUlogDir
 argument_list|(
 name|collections
+argument_list|)
+expr_stmt|;
+comment|// restart all to test core saved state
+name|ChaosMonkey
+operator|.
+name|stop
+argument_list|(
+name|jettys
+argument_list|)
+expr_stmt|;
+name|ChaosMonkey
+operator|.
+name|stop
+argument_list|(
+name|controlJetty
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Timeout waiting for all not live"
+argument_list|,
+name|ClusterStateUtil
+operator|.
+name|waitForAllReplicasNotLive
+argument_list|(
+name|cloudClient
+operator|.
+name|getZkStateReader
+argument_list|()
+argument_list|,
+literal|45000
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ChaosMonkey
+operator|.
+name|start
+argument_list|(
+name|jettys
+argument_list|)
+expr_stmt|;
+name|ChaosMonkey
+operator|.
+name|start
+argument_list|(
+name|controlJetty
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Timeout waiting for all live and active"
+argument_list|,
+name|ClusterStateUtil
+operator|.
+name|waitForAllActiveAndLiveReplicas
+argument_list|(
+name|cloudClient
+operator|.
+name|getZkStateReader
+argument_list|()
+argument_list|,
+name|collection1
+argument_list|,
+literal|120000
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertSliceAndReplicaCount
+argument_list|(
+name|collection1
+argument_list|)
+expr_stmt|;
+name|assertUlogDir
+argument_list|(
+name|collections
+argument_list|)
+expr_stmt|;
+name|assertSliceAndReplicaCount
+argument_list|(
+name|collection1
+argument_list|)
+expr_stmt|;
+name|assertSingleReplicationAndShardSize
+argument_list|(
+name|collection3
+argument_list|,
+literal|5
+argument_list|)
+expr_stmt|;
+comment|// all docs should be queried
+name|assertSingleReplicationAndShardSize
+argument_list|(
+name|collection4
+argument_list|,
+literal|5
+argument_list|)
+expr_stmt|;
+name|queryAndAssertResultSize
+argument_list|(
+name|collection4
+argument_list|,
+name|numDocs
+argument_list|,
+literal|10000
 argument_list|)
 expr_stmt|;
 block|}
